# savasan

./: .gitignore  locations.txt  requariments.txt  requirements.txt
gps_navigator/: CMakeLists.txt  package.xml
gps_navigator/src/: gps_navigator_node.py  impact_prevention.py  test.py  utils.py
hss/: CMakeLists.txt  package.xml
hss/src/: air_defense_node.py  test.py
image_handler/: CMakeLists.txt  package.xml
image_handler/src/image_handler/: blank_screen_publisher.py  camera_publisher.py
image_processor/: CMakeLists.txt  package.xml
image_processor/msg/: Yolo_xywh.msg
image_processor/src/image_processor/: image_processor_node.py  image_save.py
kamikaze/: CMakeLists.txt  package.xml
kamikaze/models/: untitled.blend
kamikaze/msg/: qr_koordinati.msg
kamikaze/src/: QR_node.py  autonom_maneuver.py  eskiwaypoint.py  kamikaze.py  pose_publisher.py  qr_reader.py  test.py  test_param.py  utilities.py  waypoint.py  waypoint_node.py
rviz_satellite/launch/: demo.launch  demo.rviz  demo_utm.rviz
savasan_general/: CMakeLists.txt  package.xml
savasan_general/launch/: apm_config.yaml  local_server.launch  poyraz.launch  rviz.py  sim.launch  simulation.sh  yeet.launch  yeet_sim.launch
savasan_general/missions/: fırst_flıght_adana.json
savasan_general/rviz/: test.rviz
savasan_general/src/: home_gps_publisher,py  home_gps_publisher.py  save_mission.py
server_comm/: CMakeLists.txt  package.xml
server_comm/msg/: HavaSavunmaKoordinati.msg  HavaSavunmaKoordinatlari.msg  Kilitlenme.msg  KonumBilgileri.msg  KonumBilgisi.msg  Qr.msg  ServerTime.msg
server_comm/src/: Competition.py  Contestant.py  mav.parm  mav.tlog  mav.tlog.raw  server.py
server_comm/src/server_comm/: comm_node.py  hss.py  test.py  utils.py  v2com.py
server_comm/srv/: gethss.srv  sendlock.srv  sendqr.srv
template_gui_package/: CMakeLists.txt  package.xml
template_gui_package/include/template_gui_package/: savasan_gui.h  savasan_gui.ui  savasan_gui.ui.autosave
template_gui_package/nodes/: savasan_gui_node.cpp
template_gui_package/src/: savasan_gui.cpp
uav_visualization/: CMakeLists.txt  package.xml
uav_visualization/models/: fixed_wing_plane.dae  fixed_wing_plane_v2.dae
uav_visualization/src/uav_visualization/: iha_subscriber.py  plane_model.py  utils.py
yolov8/: CMakeLists.txt  package.xml
yolov8/src/: PID.py  lock_checker.py  yolov8_node.py
yolov8/src/yolov8/: PID.py  lock_checker.py  yolov8_node.py
